--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,158 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  width: 100%;
+  height: 80px;
+  background-color: slateblue;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
+  }
+.navbar .links {
+  text-align: center;
+  margin-right: 50px;  
+}
+.links a {
+  color: white;
+  text-decoration: none;
+  border-bottom: 3px solid white;
+  padding-bottom: 2px; 
+  margin: 10px;  
+}
+.navbar .user {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-right: 50px;
+}
+
+.user p {
+  font-size: 15px;
+  margin-right: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.user img {
+  font-size: 15px;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input,
+textarea{
+  font-family: "Nunito", sans-serif;
 }
+
+.create-post{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  
+}
+
+form{
+  margin-top: 50px;
+  padding: 30px 20px;
+  width: 320px;
+  border-radius: 7px;
+  background-color: white;
+  backdrop-filter: blur(5px);
+  background-color: rgba(43, 0, 255, 0.588);
+  overflow: hidden;
+
+}
+
+input,
+textarea {
+  padding: 8px 10px;
+  margin: 3px 8px 16px 8px;
+  background-color: rgba(222, 239, 248, 0.877);
+  border: 0px transparent;
+  border-radius: 5px;
+  color: rgb(97, 4, 184);
+  font-size: 16px;
+  z-index: 1;
+}
+
+.submitForm:hover{
+  cursor: pointer;
+  color: black;
+}
+
+.log{
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+ 
+  justify-content: center;
+
+}
+.Sign{
+  margin-top: 170px;
+}
+
+.Sign button{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+ 
+}
+
+.Sign h1{
+  color: rgb(97, 4, 184);
+}
+
+.main{
+ 
+  margin: 0;
+  padding: 0;
+ }
+ 
+ 
+ 
+ .content{
+   background-color: #ddddf7;
+   
+   margin-left:55%;
+   max-width: max-content;
+   border-radius: 10px 10px 10px 10px;
+   padding-right: 10px;
+   padding-left: 10px;
+ }
+ 
+ .title{
+   
+   
+   
+    line-break: auto; 
+    height: auto;
+    
+ }
+ 
+ .body{
+   
+   
+    
+    line-break: auto; 
+    height: auto;
+    
+ }
+ 
+ .footer{
+   
+   
+    line-break: auto; 
+    height: auto;
+    
+ }
+ 
